feat: Generalize platform with AI topic extraction and new data model

--- a/src/app.html
+++ b/src/app.html
@@ -15,10 +15,10 @@
 		<link rel="apple-touch-icon" href="%sveltekit.assets%/icons/apple-touch-icon.png" />
 		<meta name="apple-mobile-web-app-capable" content="yes" />
 		<meta name="apple-mobile-web-app-status-bar-style" content="default" />
-		<meta name="apple-mobile-web-app-title" content="Delphi Healthcare" />
+		<meta name="apple-mobile-web-app-title" content="Delphi Platform" />
 		
 		<!-- Additional PWA meta tags -->
-		<meta name="application-name" content="Delphi Healthcare" />
+		<meta name="application-name" content="Delphi Platform" />
 		<meta name="msapplication-TileColor" content="#000000" />
 		<meta name="msapplication-TileImage" content="%sveltekit.assets%/icons/icon-144x144.png" />
 		
